--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.12",
+    "@vercel/analytics": "^1.5.0",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
